--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blog</title>
+    <title>axstump</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Blog</h1>
+        <h1>axstump</h1>
+        <nav>
+            <a href="https://github.com/axstump">github</a> | <a href="https://x.com/axstump">x</a> | <a href="#cv">CV</a>
+        </nav>
     </header>
     <main>
-        <article>
-            <h2>Latest Post</h2>
-            <p><a href="posts/post1.html">Read my first blog post!</a></p>
-        </article>
     </main>
-    <footer>
-        <p>&copy; 2024 Nathan</p>
-    </footer>
 </body>
 </html>
